Changes for 1.6.1.3
* Getting Decoration Placer to auto place all images nicely on the map if they match the territory names or if they are not decorations. Also including detailed instructions. (veqryn)

* Got the Decoration Placer to work with placing PUs, decorations, name images, capitals, vc's, and all other image types and text files. (veqryn)

* Creating new map utility, "Decoration Placer", which allows a map maker to put decorations and other images on a map, recording their points in a text file. (veqryn)

* Fixed bug in Triggers that use "chance" and also have more than 1 action or event inside them, so that they will no longer test once for each action, and instead only one time total. (veqryn)

* Created new tab, "Notes", which will just show the game notes, on the right side of the screen. (veqryn)

* Getting the objective panel to not refresh more than every 10 seconds, and adding a "Refresh" button so that it can be manually refreshed. (veqryn)

* Getting the objectives on the objective tab to show up in colors (red = true, blue = used up), and show more information: <#of uses left><T=true/F=false><#of objectives filled>. (veqryn)

* Including on Objective tab whether condition is currently true or not, and getting it to update with the game. (veqryn)

* Creating new text file, "objectives.properties", which will hold all the details about what objectives to show on the objective tab. (veqryn)

* Creating new stats panel, "Objective" Tab, which will contain a list of all national objectives and any other conditions the map maker wants. (veqryn)

* Created new "map.properties" variables: "map.cursor.hotspot.x", and "map.cursor.hotspot.y". (veqryn)

* Allowing TripleA to use custom cursors located at "misc/cursor.gif". (veqryn)

* Getting TripleA to use any sounds located in a folder named "sounds" in any map file, thereby allowing custom sounds for every map. (veqryn)
