@@ -20,8 +20,8 @@ units.scale=1
 map.width=4000
 map.height=3000
 map.scrollWrapX=false
-map.cursor.hotspot.x=2
-map.cursor.hotspot.y=4
+map.cursor.hotspot.x=1
+map.cursor.hotspot.y=3
 
 
 
