@@ -1,4 +1,6 @@
 Changes for 1.6.1.3
+* Added an 'Is Amphibious' check box to the battle calculator, so that units like marines will correctly calculate for an amphibious battle. (veqryn)
+
 * Getting Decoration Placer to auto place all images nicely on the map if they match the territory names or if they are not decorations. Also including detailed instructions. (veqryn)
 
 * Got the Decoration Placer to work with placing PUs, decorations, name images, capitals, vc's, and all other image types and text files. (veqryn)
